<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.gamecentre.StartingActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/slidingtiles"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/newgame" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StartButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/loadgame" />

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/loadtemp" />

    <Button
        android:id="@+id/ScoreBoardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ContinueButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/scoreboard" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ScoreBoardButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/back_to_selection" />

    <TextView
            android:text="@string/userTextPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:id="@+id/usernameView" android:layout_alignParentTop="true" android:layout_marginTop="25dp"/>

</RelativeLayout>