<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/choose_the_size_of_the_board"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/BoardSizeSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="170dp" />

    <Button
        android:id="@+id/BackGroundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp"
        android:text="@string/choose_background" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_below="@+id/BackGroundButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/choose_the_maximum_number_of_undos_in_the_game_n_leave_it_blank_if_you_wish_to_undo_infinitely"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/of_undo"
        android:inputType="number"
        android:text="@string/_3" />

    <Button
        android:id="@+id/SelectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/start" />

</RelativeLayout>
