<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:text="@string/instructionsheader"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/Instructions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/instructions"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Button
        android:id="@+id/ProceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/proceed" />

</RelativeLayout>