<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/constraintLayout">

    <Button
            android:id="@+id/SlidingTiles"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:text="@string/slidingtiles"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/Notice"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"/>

    <Button
            android:id="@+id/Minesweeper"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:text="@string/minesweeper"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/SlidingTiles"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"/>
    <Button
            android:id="@+id/GridFiller"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:text="@string/gridfiller"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/Minesweeper"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"/>
    <TextView
            android:id="@+id/Notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/gameselect"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
